2010-03-30  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Avoid an unportable use of `$status' shell variable.
	* Makefile.am (path-check): Don't use the `$status' shell variable
	in the target's rules, as it's special in Zsh (equivalent to `$?',
	and readonly).

	Avoid another use of `chmod -R'.
	* Makefile.am (path-check): To be safe, do not use `chmod -R' on
	$(distdir) before removing it (as Solaris `chmod -R' touches
	symlink targets).  Instead, use the cleanup strategy used in
	distdir.am.

2010-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Remove uses of @acronym and @sc.
	* doc/automake.texi (Public Macros, Limitations on File Names):
	Remove all usage of @acronym and @sc in the manual.
	Suggested by Karl Berry.

2010-03-13  Karl Berry  <karl@freefriends.org>

	GNU hello uses fdl.texi, not gpl.texi.
	* doc/automake.texi (Texinfo): Adjust example to upstream
	change.

2010-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Formatting cleanups in macro comments.
	* automake.in, lib/Automake/Channels.pm,
	lib/Automake/FileUtils.pm, lib/Automake/Options.pm,
	lib/Automake/Variable.pm, lib/Automake/XFile.pm,
	m4/options.m4, m4/substnot.m4: Fix macro comment format.

2010-03-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid generation of `tests/defs-p' file.
	* tests/defs.in: In the generated `configure.in' snippet: call
	`AM_INIT_AUTOMAKE' with the `parallel-tests' option if the shell
	variable `parallel_tests' is set to `yes'.
	* tests/Makefile.am (defs-p): Target removed.
	(check_SCRIPTS): Removed `defs-p'.
	(clean-local-check): Do not unlink `defs-p' anymore.
	($(parallel_tests)): Transformation rules for the test scripts
	adjusted.
	* tests/gen-parallel-tests: Selection rules for the test
	scripts adjusted.
	* tests/parallel-tests.test: Set `$parallel_tests' to `yes'
	then include `./defs' (rather than simply including `./defs-p').
	* tests/parallel-tests2.test: Likewise.