@@ -261,6 +261,7 @@ Paul Lunau		temp@lunau.me.uk
 Paul Martinolich	martinol@datasync.com
 Paul Thomas		PTHOMAS@novell.com
 Pavel Roskin		pavel_roskin@geocities.com
+Pavel Sanda		ps@twin.jikos.cz
 Per Bothner		bothner@cygnus.com
 Per Cederqvist		ceder@lysator.liu.se
 Per Oyvind Hvidsten	poeh@enter.vg
