@@ -12,6 +12,8 @@ Bugs fixed in 1.11.0a:
   - The `parallel-tests' test driver works around a GNU make 3.80 bug with
     trailing white space in the test list (`TESTS = foo $(EMPTY)').
 
+  - The `dist-xz' option now uses `xz -9' for maximum compression.
+
 * Long standing bugs:
 
   - On Darwin 9, `pythondir' and `pyexecdir' pointed below `/Library/Python'
