@@ -1,3 +1,10 @@
+2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Use -9 for maximum xz compression with dist-xz.
+	* lib/am/distdir.am (dist-xz, dist, dist-all): Pass -9 to xz.
+	* NEWS, THANKS: Update.
+	Report by Pavel Sanda.
+
 2010-03-30  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Avoid an unportable use of `$status' shell variable.
